--- a/src/main/resources/app/html/index.html
+++ b/src/main/resources/app/html/index.html
@@ -8,6 +8,8 @@
     <title>Indie Book</title>
 </head>
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
 <body>
 <div id="root">
 
